Fix the flickering issue with btn when on hover

--- a/src/main/resources/Styles/CreateClient.css
+++ b/src/main/resources/Styles/CreateClient.css
@@ -56,7 +56,6 @@ Button:hover {
     -fx-cursor: hand;
     -fx-font-weight: Bold;
     -fx-border-color: #132A13;
-    -fx-effect: dropshadow(three-pass-box, #AAAAAA, 0, 0 , 0 , 0);
     -fx-border-radius: 5 5 5 5;
 }
 
